modify edit page code and add delete action

--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -31,7 +31,7 @@
         {{restaurant.name}}
         <span class="text-secondary">
           <i class="fas fa-utensils pr-2"></i>
-          更改為 <input type="text" placeholder="name" name="name">
+          更改為 <input type="text" placeholder="name" name="name" value="{{{restaurant.name}}}">
         </span>
       </p>
 
@@ -43,7 +43,7 @@
         {{restaurant.name_en}}
         <span class="text-secondary">
           <i class="fas fa-utensils pr-2"></i>
-          更改為 <input type="text" placeholder="name_en" name="name_en">
+          更改為 <input type="text" placeholder="name_en" name="name_en" value="{{{restaurant.name_en}}}">
         </span>
 
       </p>
@@ -56,7 +56,7 @@
         {{restaurant.category}}
         <span class="text-secondary">
           <i class="fas fa-utensils pr-2"></i>
-          更改為 <input type="text" placeholder="category" name="category">
+          更改為 <input type="text" placeholder="category" name="category" value="{{{restaurant.category}}}">
         </span>
 
       </p>
@@ -69,7 +69,7 @@
         {{restaurant.location}}
         <span class="text-secondary">
           <i class="fas fa-utensils pr-2"></i>
-          更改為 <input type="text" placeholder="location" name="location">
+          更改為 <input type="text" placeholder="location" name="location" value="{{{restaurant.location}}}">
         </span>
       </p>
 
@@ -80,7 +80,7 @@
         </span>
         <span class="text-secondary">
           <i class="fas fa-utensils pr-2"></i>
-          更改為<input type="text" placeholder="google_map" name="google_map">
+          更改為<input type="text" placeholder="google_map" name="google_map" value="{{{restaurant.google_map}}}">
         </span>
       </p>
 
@@ -92,7 +92,7 @@
         {{restaurant.phone}}
         <span class="text-secondary">
           <i class="fas fa-utensils pr-2"></i>
-          更改為 <input type="text" placeholder="phone" name="phone">
+          更改為 <input type="text" placeholder="phone" name="phone" value="{{{restaurant.phone}}}">
         </span>
       </p>
 
@@ -104,7 +104,7 @@
         {{restaurant.rating}}
         <span class="text-secondary">
           <i class="fas fa-utensils pr-2"></i>
-          更改為 <input type="text" placeholder="rating" name="rating">
+          更改為 <input type="text" placeholder="rating" name="rating" value="{{{restaurant.rating}}}">
         </span>
       </p>
 
@@ -116,7 +116,7 @@
         {{restaurant.description}}
         <span class="text-secondary">
           <i class="fas fa-utensils pr-2"></i>
-          更改為<input type="text" placeholder="description" name="description">
+          更改為<input type="text" placeholder="description" name="description" value="{{{restaurant.description}}}">
         </span>
 
         <p class="mb-1">
@@ -126,7 +126,7 @@
           </span>
           <span class="text-secondary">
             <i class="fas fa-utensils pr-2"></i>
-            更改為<input type="text" placeholder="image" name="image">
+            更改為<input type="text" placeholder="image" name="image" value="{{{restaurant.image}}}">
           </span>
 
     </div>
