--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -66,7 +66,9 @@
         </a>
         <a href="/restaurants/{{this.id}}/edit" class="text-secondary">Edit</a>
         <a href="/restaurants/{{this.id}}" class="text-secondary">Detail</a>
-        <button type="submit">delete</button>
+        <form action="/restaurants/{{{this.id}}}/delete" method="POST" style="display: inline;">
+          <button type="submit">delete</button>
+        </form>
         {{/each}}
       </div>
     </div>
