--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -14,7 +14,7 @@
 </header>
 
 
-<form action="/new" method="POST">
+<form action="/restaurants/new" method="POST">
   <div class="form-row">
     <div class="form-group col-md-3">
       <label for="edit_image">餐廳名稱</label>
