--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -15,7 +15,7 @@
 
 
 <!-- show -->
-<form action="/restaurants/{{{restaurant.id}}}/edit" method="POST">
+<form action="/restaurants/{{{restaurant.id}}}/edit?_method=PUT" method="POST">
   <h1 class="mb-1 restaurant-show-title">{{restaurant.name}}</h1>
   <div class="form-group col-md-3">
   </div>
