--- a/views/show.handlebars
+++ b/views/show.handlebars
@@ -54,7 +54,7 @@
       <img class="rounded mx-auto d-block mb-4 w-100" src="{{restaurant.image}}" alt="{{restaurant.name}}"
         style="max-width: 600px;">
       <a href="/restaurants/{{{restaurant.id}}}/edit" class="text-secondary">Edit</a>
-      <form action="/restaurants/{{{restaurant.id}}}/delete" method="POST" style="display: inline;">
+      <form action="/restaurants/{{{restaurant.id}}}/delete?_method=DELETE" method="POST" style="display: inline;">
         <button type="submit">delete</button>
       </form>
     </div>
