--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -65,7 +65,7 @@
             <a href="/restaurants/{{this.id}}/edit" class="text-secondary">Edit</a>
             <a href="/restaurants/{{this.id}}" class="text-secondary">Detail</a>
             <form action="/restaurants/{{{this.id}}}/delete?_method=DELETE" method="POST" style="display: inline;">
-              <button type="submit">delete</button>
+              <button type="submit" class="btn btn-danger">delete</button>
           </div>
         </a>
         </form>
