--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,7 +18,7 @@
   <script src="/javascripts/jquery-3.4.1.js"></script>
   <script src="/javascripts/popper.min.js"></script>
   <script src="/javascripts/bootstrap.js"></script>
-  <link rel="stylesheet" href="/stylesheets/index.css">
+  <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.min.css">
   {{{body}}}
 </body>
 
