--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -59,5 +59,5 @@
     </div>
 
   </div>
-  <button type="submit">新增餐廳清單</button>
+  <button type="submit" class="btn btn-success">新增餐廳清單</button>
 </form>
