--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,10 +8,8 @@
           width="30" height="30" class="d-inline-block align-top" alt="我的餐廳清單">
         我的餐廳清單
       </a>
-    </div>
 
-    <div class="container">
-      <a class="navbar" href="/restaurants/new">
+      <a class="btn btn-success" href="/restaurants/new">
         新增餐廳清單
       </a>
     </div>
@@ -38,16 +36,17 @@
   </div>
 </div>
 
+
 <!-- ./views/index.handlebars -->
 
-<div class="container mt-5">
+<div class="container mt-5 ">
   <div class="row">
-    <div class="col-md-10 col-12 mx-auto">
-      <div class="card-columns">
+    <div class="col-md-10 col-12 mx-auto ">
+      <div class="card-columns ">
         <!-- 迴圈 -->
         {{#each restaurants}}
-        <a href="/restaurants/{{this.id}}" class="text-secondary">
-          <div class="card mb-3">
+        <a href="/restaurants/{{this.id}}" class="text-secondary ">
+          <div class="card mb-3 bg-light text-dark">
             <img class="card-img-top" src="{{this.image}}" alt="{{this.name}}" width="300px">
             <div class="card-body p-3">
               <h6 class="card-title mb-1">{{this.name}}</h6>
@@ -62,8 +61,8 @@
               </span>
 
             </div>
-            <a href="/restaurants/{{this.id}}/edit" class="text-secondary">Edit</a>
-            <a href="/restaurants/{{this.id}}" class="text-secondary">Detail</a>
+            <a href="/restaurants/{{this.id}}/edit" class="btn btn-info">Edit</a>
+            <a href="/restaurants/{{this.id}}" class="btn btn-dark">Detail</a>
             <form action="/restaurants/{{{this.id}}}/delete?_method=DELETE" method="POST" style="display: inline;">
               <button type="submit" class="btn btn-danger">delete</button>
           </div>
