--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -15,13 +15,13 @@
 
 
 <!-- show -->
-<form action="/restaurants/{{{restaurant.id}}}/edit?_method=PUT" method="POST">
+<form action="/restaurants/{{{restaurant._id}}}/edit?_method=PUT" method="POST">
   <h1 class="mb-1 restaurant-show-title">{{restaurant.name}}</h1>
   <div class="form-group col-md-3">
   </div>
 
   <div class="row">
-    <div class="col-12 col-md-10 mx-auto">
+    <div class="col-md-8 mx-auto ">
 
       <p class="mb-1">
         <span class="text-secondary">
@@ -43,7 +43,6 @@
           <label for="類別" class="fas fa-utensils pr-2">類別:</label>
           <input type="text" placeholder="category" name="category" value="{{{restaurant.category}}}">
         </span>
-
       </p>
 
       <p class="mb-1">
@@ -86,15 +85,14 @@
         <span class="text-secondary">
           <label for="圖片" class="fas fa-utensils pr-2">圖片:</label>
           <input type="text" placeholder="image" name="image" size="100PX" value="{{{restaurant.image}}}">
-          <img class="rounded mx-auto d-block mb-4 w-100" src="{{restaurant.image}}" alt="{{restaurant.name}}"
-            style="max-width: 600px;">
         </span>
       </p>
+      <img class="rounded mx-auto d-block mb-4 w-100 mt-5" src="{{restaurant.image}}" alt="{{restaurant.name}}"
+        style="max-width: 600px;">
+      <button type="submit" class="btn btn-success">修改清單</button>
 
     </div>
   </div>
   </div>
-  <div class="col-12 col-md-10 mx-auto">
-    <button type="submit" class="btn btn-success">修改清單</button>
-  </div>
+
 </form>
