--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -45,7 +45,7 @@
       <div class="card-columns ">
         <!-- 迴圈 -->
         {{#each restaurants}}
-        <a href="/restaurants/{{this.id}}" class="text-secondary ">
+        <a href="/restaurants/{{this._id}}" class="text-secondary ">
           <div class="card mb-3 bg-light text-dark">
             <img class="card-img-top" src="{{this.image}}" alt="{{this.name}}" width="300px">
             <div class="card-body p-3">
@@ -61,9 +61,9 @@
               </span>
 
             </div>
-            <a href="/restaurants/{{this.id}}/edit" class="btn btn-info">Edit</a>
-            <a href="/restaurants/{{this.id}}" class="btn btn-dark">Detail</a>
-            <form action="/restaurants/{{{this.id}}}/delete?_method=DELETE" method="POST" style="display: inline;">
+            <a href="/restaurants/{{this._id}}/edit" class="btn btn-info">Edit</a>
+            <a href="/restaurants/{{this._id}}" class="btn btn-dark">Detail</a>
+            <form action="/restaurants/{{{this._id}}}/delete?_method=DELETE" method="POST" style="display: inline;">
               <button type="submit" class="btn btn-danger">delete</button>
           </div>
         </a>
