--- a/views/show.handlebars
+++ b/views/show.handlebars
@@ -7,6 +7,10 @@
           width="30" height="30" class="d-inline-block align-top" alt="好。吃">
         我的餐廳清單
       </a>
+
+      <a class="btn btn-success" href="/restaurants/new">
+        新增餐廳清單
+      </a>
     </div>
   </nav>
 
@@ -16,11 +20,11 @@
 
 <!-- show -->
 <h1 class="mb-1 restaurant-show-title">{{restaurant.name}}</h1>
-<div class="container">
-  <div class="row">
-    <div class="col-12 col-md-10 mx-auto">
+<div class="container" align="center">
+  <div class="form-group col-lg-8">
+    <div>
 
-      <p class="mb-1">
+      <p>
         <span class="text-secondary">
           <i class="fas fa-utensils pr-2"></i>
           類別：
@@ -28,26 +32,30 @@
         {{restaurant.category}}
       </p>
 
-      <p class="mb-1">
+      <p>
         <span class="text-secondary">
-          <i class="fas fa-map-marker-alt pr-2"></i>
+          <i class='fas fa-map-marker pr-2'></i>
           地址：
         </span>
         {{restaurant.location}}
         <a href="https://goo.gl/maps/V9mKwVJ4s5v" class="text-secondary" target="_blank">
-          <i class="fas fa-location-arrow pr-2 fa-xs"></i>
+          <a class="fas fa-location-arrow pr-2 fa-xs"></a>
         </a>
       </p>
 
-      <p class="mb-1">
+      <p>
         <span class="text-secondary">
-          <i class="fas fa-mobile-alt pr-2"></i>
+          <a class="fas fa-mobile-alt pr-2"></a>
           電話：
         </span>
         {{restaurant.phone}}
       </p>
 
-      <p class="mb-5">
+      <p>
+        <span class="text-secondary">
+          <a class="fas fa-mobile-alt pr-2"></a>
+          簡介：
+        </span>
         {{restaurant.description}}
       </p>
 
