--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -17,7 +17,7 @@
 
 <form action="/restaurants/new" method="POST">
   <div class="row" style="background-color:lightgrey">
-    <div class="mx-auto mt-5">
+    <div class="col-12 col-md-10 col-lg-8 mx-auto">
       <div class="form-group">
         <span>
           <label for="new_餐廳名稱" class="fas fa-utensils pr-2">餐廳名稱:</label>
