--- a/views/show.handlebars
+++ b/views/show.handlebars
@@ -21,7 +21,7 @@
 <!-- show -->
 <h1 class="mb-1 restaurant-show-title">{{restaurant.name}}</h1>
 <div class="container" align="center">
-  <div class="form-group col-lg-8">
+  <div class="form-group col-12 col-md-10 col-lg-8 mx-auto">
     <div>
 
       <p>
