--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,8 +15,8 @@
 
 <body>
   <!-- include javascript files here -->
-  <script src="/javascripts/jquery-3.4.1.js"></script>
-  <script src="/javascripts/popper.min.js"></script>
+  <script src="/javascripts/jquery-3.3.1.js"></script>
+  <script src="/javascripts/popper.js"></script>
   <script src="/javascripts/bootstrap.js"></script>
   <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.min.css">
   {{{body}}}
